<resources>
    <string name="app_name">ShayariApp</string>
    <string name="love">Love</string>
    <string name="Sad">Sad</string>
    <string name="Attitude">Attitude</string>
    <string name="haryanvi">Haryanvi</string>
    <string name="settings">Settings</string>

    <string name="LoveDemo">तेरे नज़रों के तीर इतने शातिर है,
की पता ही नही चलता किस के खातिर हैं।</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="copy">Copy</string>
    <string name="loading">Loading...</string>
    <string name="bookmarks">BookMark</string>
    <string name="rate_us">Rate Us</string>
    <string name="darkmode">DarkMode</string>
    <string name="contact_us">Contact us</string>
    <string name="more_apps">More Apps</string>
    <string name="banner_ads">Banner Ads</string>
    <string name="share">Share</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="double_tap_on_quotes_to_add_in_bookmark">Double Tap on Quotes to add In bookMark</string>
    <string name="todo">TODO</string>
    <string name="about">About Us</string>
    <string name="exit">Exit</string>
    <string name="version">Version : 1.0</string>
    <string name="developer_name">Developer Name : </string>
    <string name="Ashish">Ashish Sharma</string>
    <string name="contact_options">"Contact Options : "</string>
    <string name="instagram">Instagram</string>
    <string name="asking">Do you want to Exit?</string>
    <string name="yes">Yes</string>
    <string name="No">No</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="develop">Develop Studio</string>
</resources>