<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:weightSum="4"
        android:id="@+id/lal"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/developer"
            android:layout_weight="2"
            android:textAlignment="textEnd"
            android:text="@string/developer_name"
            android:layout_marginTop="20dp"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/name"
            android:layout_weight="2"
            android:layout_marginStart="10dp"
            android:text="@string/Ashish"
            android:layout_marginTop="20dp"
            style="@style/TextAppearance.Material3.TitleSmall"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/conOp"
        android:layout_marginTop="15dp"
        android:paddingStart="50dp"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:text="@string/contact_options"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_marginBottom="35dp"
        android:layout_marginTop="25dp"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:text="@string/instagram"
            android:layout_weight="1"
            android:id="@+id/instaProfile"
            android:textSize="17sp"
            android:layout_marginStart="25dp"
         style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:text="@string/whatsapp"
            android:layout_weight="1"
            android:id="@+id/emailContact"
            android:textSize="17sp"
            android:layout_marginStart="25dp"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_height="wrap_content"/>


    </LinearLayout>

</LinearLayout>